fix:多租户下的菜单过滤开关
