# app/controllers/systenant.go
@@ -160,6 +160,7 @@ func (tc *TenantController) Add(c *gin.Context) {
 	tenant.Domain = req.Domain
 	tenant.PlatformDomain = req.PlatformDomain
 	tenant.MenuPermission = req.MenuPermission
+	tenant.MenuFilterEnabled = req.MenuFilterEnabled
 
 	err = app.DB().WithContext(c).Create(tenant).Error
 	if err != nil {
@@ -245,6 +246,7 @@ func (tc *TenantController) Update(c *gin.Context) {
 	tenant.Domain = req.Domain
 	tenant.PlatformDomain = req.PlatformDomain
 	tenant.MenuPermission = req.MenuPermission
+	tenant.MenuFilterEnabled = req.MenuFilterEnabled
 
 	err = app.DB().WithContext(c).Save(tenant).Error
 	if err != nil {
