# docs/swagger/swagger.json
@@ -461,7 +461,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/gin-fast_app_models.LoginRequest"
+                            "$ref": "#/definitions/models.LoginRequest"
                         }
                     }
                 ],
@@ -624,6 +624,13 @@
                         "default": 0,
                         "description": "是否覆盖文件 (0:否, 1:是)",
                         "name": "overwriteFiles",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 0,
+                        "description": "已确认database.sql中的危险语句，允许继续执行 (0:否, 1:是)",
+                        "name": "confirmDangerousSQL",
                         "in": "formData"
                     }
                 ],
@@ -5535,7 +5542,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/gin-fast_app_models.DeleteRequest"
+                            "$ref": "#/definitions/models.DeleteRequest"
                         }
                     }
                 ],
@@ -5589,7 +5596,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/gin-fast_app_models.UpdateRequest"
+                            "$ref": "#/definitions/models.UpdateRequest"
                         }
                     }
                 ],
@@ -6035,84 +6042,6 @@
         }
     },
     "definitions": {
-        "gin-fast_app_models.DeleteRequest": {
-            "type": "object",
-            "required": [
-                "id"
-            ],
-            "properties": {
-                "id": {
-                    "type": "integer"
-                }
-            }
-        },
-        "gin-fast_app_models.LoginRequest": {
-            "type": "object",
-            "required": [
-                "password",
-                "username"
-            ],
-            "properties": {
-                "password": {
-                    "type": "string"
-                },
-                "tenantCode": {
-                    "type": "string"
-                },
-                "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "gin-fast_app_models.UpdateRequest": {
-            "type": "object",
-            "required": [
-                "deptId",
-                "id",
-                "nickName",
-                "roles",
-                "sex",
-                "userName"
-            ],
-            "properties": {
-                "deptId": {
-                    "type": "integer"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "email": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "nickName": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                },
-                "phone": {
-                    "type": "string"
-                },
-                "roles": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
-                },
-                "sex": {
-                    "type": "string"
-                },
-                "status": {
-                    "type": "integer"
-                },
-                "userName": {
-                    "type": "string"
-                }
-            }
-        },
         "models.AddRequest": {
             "type": "object",
             "required": [
@@ -6280,6 +6209,35 @@
                     "type": "integer"
                 },
                 "uploadId": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.DeleteRequest": {
+            "type": "object",
+            "required": [
+                "id"
+            ],
+            "properties": {
+                "id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.LoginRequest": {
+            "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "tenantCode": {
+                    "type": "string"
+                },
+                "username": {
                     "type": "string"
                 }
             }
@@ -6986,6 +6944,9 @@
                 "domain": {
                     "type": "string"
                 },
+                "menuFilterEnabled": {
+                    "type": "boolean"
+                },
                 "menuPermission": {
                     "type": "string"
                 },
@@ -7020,6 +6981,9 @@
                 },
                 "id": {
                     "type": "integer"
+                },
+                "menuFilterEnabled": {
+                    "type": "boolean"
                 },
                 "menuPermission": {
                     "type": "string"
@@ -7115,7 +7079,6 @@
         "models.UpdateBasicInfoRequest": {
             "type": "object",
             "required": [
-                "description",
                 "nickName",
                 "sex"
             ],
@@ -7142,6 +7105,55 @@
                     "type": "integer"
                 },
                 "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.UpdateRequest": {
+            "type": "object",
+            "required": [
+                "deptId",
+                "id",
+                "nickName",
+                "roles",
+                "sex",
+                "userName"
+            ],
+            "properties": {
+                "deptId": {
+                    "type": "integer"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "nickName": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "phone": {
+                    "type": "string"
+                },
+                "roles": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "sex": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer"
+                },
+                "userName": {
                     "type": "string"
                 }
             }
